[package]
name = "trawler-daemon"
version = "0.1.0"
authors = ["Eluvatar <drstadler@gmail.com>"]
license = "GPL-3.0+"
homepage = "https://github.com/Eluvatar/trawler-daemon-rust"
repository = "https://github.com/Eluvatar/trawler-daemon-rust"
description = """
Rust implementation of trawler daemon.
"""
build = "build.rs"

[build-dependencies]
filetime = "0.1.6"

[[bin]]
name = "trawler-daemon"
path = "src/main.rs"

[dependencies]
time = "0.1"
getopts = "0.2"
error-type = "0.1.2"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq.git"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"

